[tool.poetry]
name = "vaultkey"
version = "1.0.0"
description = "Secure local API Key Wallet with AES-256-GCM encryption"
authors = ["VaultKey Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "wallet"}]

[tool.poetry.scripts]
wallet = "wallet.ui.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0"
argon2-cffi = "^23.1"
typer = {extras = ["all"], version = "^0.12"}
textual = "^0.60"
customtkinter = "^5.2"
pyperclip = "^1.9"
rich = "^13.7"
pydantic = "^2.6"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
freezegun = "^1.4"
hypothesis = "^6.100"
mypy = "^1.9"
ruff = "^0.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=wallet/core --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = false

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "S", "B", "I"]
ignore = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
